--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
     <!-- Stores -->
     <div class="col-md-3">
         <a asp-area="Users" asp-controller="Stores" asp-action="Index">
-            <div class="card divShadow">
+            <div class="card divShadow--xs">
                 <div class="card-status bg-primary br-tr-7 br-tl-7"></div>
                 <div class="card-body pnlHeight">
                     <div class="row">
@@ -76,7 +76,7 @@
     <!-- Transfers -->
     <div class="col-md-3">
         <a asp-area="Users" asp-controller="Transfers" asp-action="Index" class="text-secondary">
-            <div class="card divShadow">
+            <div class="card divShadow--xs">
                 <div class="card-status bg-secondary br-tr-7 br-tl-7"></div>
                 <div class="card-body pnlHeight">
                     <div class="row">
@@ -105,7 +105,7 @@
     <!-- Disposals -->
     <div class="col-md-3">
         <a asp-area="Users" asp-controller="Disposals" asp-action="Index" class="text-info">
-            <div class="card divShadow">
+            <div class="card divShadow--xs">
                 <div class="card-status bg-info br-tr-7 br-tl-7"></div>
                 <div class="card-body pnlHeight">
                     <div class="row">
@@ -137,7 +137,7 @@
     <!-- Reports -->
     <div class="col-md-3">
         <a asp-area="Users" asp-controller="Reporting" asp-action="Index" class="text-warning">
-            <div class="card divShadow">
+            <div class="card divShadow--xs">
                 <div class="card-status bg-warning br-tr-7 br-tl-7"></div>
                 <div class="card-body pnlHeight">
                     <div class="row">
@@ -173,8 +173,8 @@
                 <!-- ✅ Tour: Table -->
                 <div class="col-md-6 mb-3" data-tour="dashboard.table">
                     <div class="table-responsive">
-                        <table id="tblCategories" class="table text-nowrap mb-0 table-bordered border-top border-bottom divShadow">
-                            <thead class="bg-primary-gradient ms-auto divShadow">
+                        <table id="tblCategories" class="table text-nowrap mb-0 table-bordered border-top border-bottom divShadow--xs">
+                            <thead class="bg-primary-gradient ms-auto divShadow--xs">
                                 <tr>
                                     <th class="text-white">@Localizer["Category"]</th>
                                     <th class="text-white">@Localizer["Count"]</th>
