--- a/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
@@ -8,60 +8,7 @@
     ViewData["TourPageKey"] = "Stores/Index";
 }
 
-<style>
-    .card.divBackground {
-        position: relative;
-        overflow: hidden; /* Ensure the pseudo-element doesn't cause overflow */
-    }
-
-        .card.divBackground::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: url('../assets/images/brand/FGS_Small4.png');
-            background-repeat: no-repeat;
-            background-position: center; /* Center the background image */
-            background-size: 15%; /* Increase the size by 10% */
-            opacity: 0.5; /* Adjust the opacity to your preference */
-            pointer-events: none; /* Allow interaction with content behind the pseudo-element */
-        }
-
-    .tooltip-container {
-        position: relative;
-        display: inline-block;
-        cursor: pointer;
-        color: #333;
-        font-size: 16px;
-        padding: 10px;
-    }
-
-    .tooltip {
-        visibility: hidden;
-        width: 240px; /* Adjust the width as needed */
-        background-color: #fff;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-        position: absolute;
-        z-index: 1;
-        top: 125%;
-        left: 50%;
-        margin-left: -120px; /* Half of the width */
-        opacity: 0;
-        transition: opacity 0.3s, visibility 0.3s;
-    }
-
-    .cardTooltip {
-        padding: 16px;
-    }
-
-    .tooltip-container:hover .tooltip {
-        visibility: visible;
-        opacity: 1;
-    }
-</style>
+<link href="~/css/stores-index.css" rel="stylesheet" />
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
@@ -84,9 +31,9 @@
 
                     <div class="col-md-3" data-tour="stores.search"><input type="text" id="txtSearchStore" class="form-control" placeholder="@Localizer["SearchForStore"]" /></div>
 
-                    <div class="btn-list" data-tour="stores.assetreport">
+                    @* <div class="btn-list" data-tour="stores.assetreport">
                         <a class="btn btn-outline-info" data-bs-target="#mdl-asset-report" data-bs-toggle="modal"><i class="fe fe-printer"></i> @Localizer["AssetReports"]</a>
-                    </div>
+                    </div> *@
                 </div>
             </div>
         </div>
@@ -116,7 +63,7 @@
 
                                         var bgType = (store.StoreType == 1) ? "bg-info" : "bg-info-transparent";
                                         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
-                                            <div class="card divShadow divBackground">
+                                            <div class="divShadow--xs card divBackground" style="cursor:pointer;" onclick="loadStore(@store.Id)">
                                                 <div class="card-body">
                                                     <div class="row">
                                                         <div class="col-md-12">
@@ -249,6 +196,9 @@
                 $('#frmAssetReport').submit();
             });
         });
+        const loadStore = (id) => {
+            window.location.href = `/Users/Stores/StoreDetails/${id}`;
+        };
 
         const searchStore = () => {
 
@@ -273,7 +223,7 @@
 
                     sHtml += `
                     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
-                        <div class="card divShadow divBackground">
+                        <div class="card divShadow--xs divBackground" style="cursor:pointer;" onclick="loadStore(${e.id})">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-12">
