--- a/MODAMSWeb/Areas/Users/Views/Assets/CreateAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/CreateAsset.cshtml
@@ -36,7 +36,7 @@
 <div class="row">
     <div class="col-lg-12 col-md-12">
         <div class="card">
-            <div class="card-header border-bottom bg-info-gradient divShadow">
+            <div class="card-header border-bottom bg-info-gradient divShadow--xs">
                 <h4 class="mb-0 text-white">@Localizer["AssetDetails"]</h4>
             </div>
             <div class="card-body p-0">
