--- a/MODAMSWeb/Areas/Users/Views/Assets/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/Index.cshtml
@@ -25,7 +25,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <div class="card divShadow">
+        <div class="card divShadow--xs">
             <div class="card-body p-4">
                 <div class="d-flex align-items-center justify-content-between">
                     <div class="text-start">
@@ -41,34 +41,27 @@
     <div class="col-12 col-sm-12">
         <div class="card">
             <div class="card-body project-list-table-container">
-                <div class="row">
-                    <div class="col-md-2">
-                        <div data-tour="assets.filter" class="form-group pb-1 d-flex align-items-center">
-                            <label asp-for="@Model.SubCategoryId" class="mr-2 mb-0" style="vertical-align: middle;">filter:</label>
-                            <select asp-for="@Model.SubCategoryId" asp-items="@Model.CategorySelectList"
-                                    class="form-control select2 form-select">
-                                <option value="0">@Localizer["AllAssets"]</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
                 @{
-                    string sDisabled = "disabled";
-
-                    if (Model.IsAuthorized)
-                    {
-                        sDisabled = "";
-                    }
-
+                    var sDisabled = Model.IsAuthorized ? "" : "disabled";
                 }
-                <div class="mb-2">
+
+                <div class="toolbar d-flex align-items-center gap-2 flex-wrap mb-2">
                     <a asp-area="Users" asp-controller="Assets" asp-action="CreateAsset"
                        asp-route-id="@Model.StoreId"
-                       class="btn btn-info-gradient trShadow @sDisabled" data-tour="assets.create">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
-                        @Localizer["NewAsset"]
+                       class="btn-app @sDisabled" data-tour="assets.create" title="@Localizer["Create new asset"]">
+                        <i class="fa-solid fa-circle-plus btn-icon" aria-hidden="true"></i>
+                        <span>@Localizer["NewAsset"]</span>
                     </a>
+
+                    <div data-tour="assets.filter" class="d-inline-flex align-items-center ms-auto">
+                        <label asp-for="@Model.SubCategoryId" class="me-2 mb-0">Filter:</label>
+                        <select asp-for="@Model.SubCategoryId" asp-items="@Model.CategorySelectList"
+                                class="form-select js-filter">
+                            <option value="0">@Localizer["AllAssets"]</option>
+                        </select>
+                    </div>
                 </div>
+                
                 <div class="table-responsive export-table">
                     <table id="tblAssets" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
                         <thead class="bg-primary-gradient ms-auto divShadow">
