--- a/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
@@ -185,9 +185,9 @@
                         <div class="toolbar d-flex align-items-center gap-2 flex-wrap mb-2">
                             <a asp-area="Users" asp-controller="Assets" asp-action="CreateAsset"
                                asp-route-id="@Model.StoreId"
-                               class="btn-app @sDisabled"
+                               class="btn btn-outline-info @sDisabled"
                                data-tour="assets.create" title="@Localizer["Create new asset"]">
-                                <i class="fa-solid fa-circle-plus btn-icon" aria-hidden="true"></i>
+                                <i class="fa fa-circle-plus" aria-hidden="true"></i>
                                 <span>@Localizer["NewAsset"]</span>
                             </a>
                         </div>
