--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetList.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetList.cshtml
@@ -18,7 +18,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <div class="card divShadow">
+        <div class="card divShadow--xs">
             <div class="card-body p-4">
                 <div class="d-flex align-items-center justify-content-between">
                     <h4 class="m-0">@Model.CategoryName (@Localizer["Count"]: @Model.TotalAssets())</h4>
