--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -61,6 +61,7 @@
     <link href="~/assets/css/skin-modes.css" rel="stylesheet" asp-append-version="true" />
     <link href="~/assets/css/icons.css" rel="stylesheet" asp-append-version="true" />
     <link href="~/css/custom_css_layout.css" rel="stylesheet" />
+    <link href="~/css/popover.css" rel="stylesheet" />
 
     <!-- Add FontAwesome in <head> if not added -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -68,6 +69,9 @@
 
     <!-- Kendo UI -->
     <link href="https://kendo.cdn.telerik.com/themes/7.0.2/bootstrap/bootstrap-main.css" rel="stylesheet" />
+  
+    
+    
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.kendostatic.com/2023.2.606/js/jszip.min.js"></script>
     <script src="https://cdn.kendostatic.com/2023.2.606/js/kendo.all.min.js"></script>
